--- a/app/views/main.html
+++ b/app/views/main.html
@@ -4,6 +4,7 @@
     <head>
         <title>#{get 'title' /}</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" media="screen" href="@{'/public/css/semantic.css'}">
         <link rel="stylesheet" media="screen" href="@{'/public/css/main.css'}">
         #{get 'moreStyles' /}
         <link rel="shortcut icon" type="image/png" href="@{'/public/img/favicon.png'}">
