Improve CRUD fields view, and match _blank and _show actions to Semantic UI.

--- a/app/views/crud/blank.html
+++ b/app/views/crud/blank.html
@@ -3,17 +3,14 @@
 
 #{crud.navigation /}
 
-<div id="crudBlank" class="${type.name} col-md-10 col-md-offset-1">
-
-    <div class="objectForm">
-    #{form action:@create(), enctype:'multipart/form-data', class:'ui form'}
-        #{crud.form /}
-        <p class="crudButtons">
-          <hr />
-            <input type="submit" class="ui primary button" name="_save" value="&{'crud.save', type.modelName}" />
-            <a type="button" class="ui default button">&{'crud.return'}</a>
-        </p>
-    #{/form}
-    </div>
-
+<div class="ui sixteen wide basic segment">
+#{form action:@create(), enctype:'multipart/form-data', class:'ui form'}
+  #{crud.form /}  
+        
+  <div class="ui divider"></div>
+  <p class="crudButtons">
+    <input type="submit" class="ui primary button" name="_save" value="&{'crud.save', type.modelName}" />
+    <a type="button" class="ui default button">&{'crud.return'}</a>
+  </p>
+#{/form}
 </div>
