--- a/app/views/tags/crud/form.html
+++ b/app/views/tags/crud/form.html
@@ -26,7 +26,7 @@
 
     %{ def field = currentType.getField(fieldName) }%
 
-<div class="crudField crud_${field.type}">
+<div class="ui field">
 
     %{ if(fieldsHandler[fieldName]) { }%
         %{
@@ -130,9 +130,7 @@
                 }%
             %{ } }%
     </span>
-
     %{ } }%
-
 </div>
 
 #{/list}
