--- a/app/views/tags/crud/textField.html
+++ b/app/views/tags/crud/textField.html
@@ -1,11 +1,7 @@
 #{field 'object.' + _name}
-  <div class="field">
-    <label for="${field.id}">
-        &{_name}
-    </label>
-    <input id="${field.id}" class="${field.errorClass} form-control" type="text" name="${field.name}" value="${params[field.name]?.escape()?.raw() ?: field.error?.message == 'validation.required' ? '' : _value?.escape()?.raw()}" size="50" />
-    #{ifError field.name}
-        <span class="error">${field.error.raw()}</span>
-    #{/ifError}
-  </div>
+  <label>&{_name}</label>
+  <input class="${field.errorClass}" type="text" name="${field.name}" value="${params[field.name]?.escape()?.raw() ?: field.error?.message == 'validation.required' ? '' : _value?.escape()?.raw()}" size="50" />
+  #{ifError field.name}
+      <span class="error">${field.error.raw()}</span>
+  #{/ifError}
 #{/field}
